# ai-resume-assistant

./: .env.example  .gitignore  AGENTS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  db.sql  docker-compose.yml  index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.ts  server.js  setup-turso.js  tauri.conf.json  test-ai-parse.js  test-word-parse-simple.js  test-word-parse.html  test-word-parse.js  tsconfig.json  turso.sql  vercel.json  vite.config.ts
.github/: labels.yml
.github/workflows/: ci.yml  labels.yml
config/: db.js  migrations.js  turso.js
controllers/: adminController.js  aiController.js  resumeController.js  userController.js
data/: templates.json
docs/: AGENTS.md  api-spec.md  development-standards.md  directory-structure.md  error-handling.md  naming-conventions.md
docs/plans/: 2026-04-10-admin-backoffice-plan.md  2026-04-10-admin-login-network-fix-plan.md  2026-04-10-test-deps-and-admin-env-plan.md  2026-04-10-user-login-network-fix-plan.md  2026-04-12-pdf-export-layout-fix-plan.md  2026-04-12-pdf-line-structure-recovery-plan.md  2026-04-12-user-login-view-recovery-plan.md  2026-04-13-phase1-frontend-boundary-refactor-plan.md  2026-04-13-server-ai-refactor-plan.md  2026-04-14-user-login-register-entry-plan.md
docs/requirements/: 2026-04-10-admin-backoffice.md  2026-04-10-admin-login-network-fix.md  (+7 more)
middleware/: adminAuth.js  auth.js
routes/: admin.js  ai.js  resume.js  user.js
server/: app.js  index.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml
(+88 files in other folders)
